--- a/web-home.html
+++ b/web-home.html
@@ -368,7 +368,7 @@ function showSlides() {
     <td> <img class="zoom" src="Mexican-Streert-Corn-Recipe-by-food-fusion.jpg"> </td>
     <td> <img class="zoom" src="Tres-Leches-Cake-Recipe-by-Food-fusion.jpg"> </td>
     <td> <img class="zoom" src="Korean-chicken-skewers-Recipe-by-Food-fusion.jpg"> </td>
-    <td> <img class="zoom" src="Shahi-tukra-Lasagna-Recipe-by-Food-fusion.jpeg"> </td>
+    <td> <img class="zoom" src="Shahi-tukra-Lasagna-Recipe-by-Food-fusion.jpg"> </td>
   </tr>
   <tr>
     <td>Mexican Sweet Corn</td>
